--- a/codes/day-3/forms-app/src/app/app.component.html
+++ b/codes/day-3/forms-app/src/app/app.component.html
@@ -12,6 +12,9 @@
         <div *ngIf="first?.errors?.['min']">
           Minimum value is {{first?.errors?.['min'].min}} and your actual value is {{first?.errors?.['min'].actual}}
         </div>
+        <div *ngIf="first?.errors?.['number']">
+          {{first?.errors?.['number']}}
+        </div>
       </div>
     </div>
     <div>
@@ -24,6 +27,9 @@
         </div>
         <div *ngIf="second?.errors?.['min']">
           Minimum value is 1
+        </div>
+        <div *ngIf="second?.errors?.['number']">
+          {{second.errors?.['number']}}
         </div>
       </div>
     </div>
