--- a/codes/day-3/albums-app/src/app/albums/components/album-list/album-list.component.html
+++ b/codes/day-3/albums-app/src/app/albums/components/album-list/album-list.component.html
@@ -1,6 +1,11 @@
 <h2>Album List: </h2>
 <br>
-<table class="table table-hover">
+
+<ng-template #alternate>
+    <span>Albums not found</span>
+</ng-template>
+
+<table class="table table-hover" *ngIf="albums;else alternate">
     <thead class="theadColor">
         <tr>
             <th>Album Id</th>
