--- a/codes/day-3/albums-app/src/app/albums/components/album-list/album-list.component.html
+++ b/codes/day-3/albums-app/src/app/albums/components/album-list/album-list.component.html
@@ -1,27 +1,31 @@
 <h2>Album List: </h2>
 <br>
-
+<ng-template #loading>
+    <span>Loading..please wait</span>
+</ng-template>
 <ng-template #alternate>
     <span>Albums not found</span>
 </ng-template>
 
-<table class="table table-hover" *ngIf="albums;else alternate">
-    <thead class="theadColor">
-        <tr>
-            <th>Album Id</th>
-            <th>Id</th>
-            <th>Title</th>
-            <th>Url</th>
-            <th>Thumbnail URL</th>
-        </tr>
-    </thead>
-    <tbody class="table-dark">
-        <tr *ngFor="let al of albums">
-            <td>{{al.albumId}}</td>
-            <td>{{al.id}}</td>
-            <td>{{al.title}}</td>
-            <td>{{al.url}}</td>
-            <td>{{al.thumbnailUrl}}</td>
-        </tr>
-    </tbody>
-</table>
+<div *ngIf="loadingComplete;else loading">
+    <table class="table table-hover" *ngIf="albums;else alternate">
+        <thead class="theadColor">
+            <tr>
+                <th>Album Id</th>
+                <th>Id</th>
+                <th>Title</th>
+                <th>Url</th>
+                <th>Thumbnail URL</th>
+            </tr>
+        </thead>
+        <tbody class="table-dark">
+            <tr *ngFor="let al of albums">
+                <td>{{al.albumId}}</td>
+                <td>{{al.id}}</td>
+                <td>{{al.title}}</td>
+                <td>{{al.url}}</td>
+                <td>{{al.thumbnailUrl}}</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
