--- a/codes/day-2/first-ng-app/src/app/calculator/calculator.component.html
+++ b/codes/day-2/first-ng-app/src/app/calculator/calculator.component.html
@@ -15,14 +15,17 @@
         <div>
             <label for="txtFirst">Enter 1st Number: &nbsp;</label>
             <!-- <input type="text" name="first" id="txtFirst" [(ngModel)]="first" #fnum> -->
-            <input type="number" name="first" id="txtFirst" ngModel #fnum="ngModel" required [min]="minValue">
+            <input type="text" name="first" id="txtFirst" ngModel #fnum="ngModel" required validatenumber>
             <div *ngIf="fnum.invalid && fnum.touched">
                 <div *ngIf="fnum.errors?.['required']">
                     Enter a value
                 </div>
-                <div *ngIf="fnum.errors?.['min']">
+                <!-- <div *ngIf="fnum.errors?.['min']">
                     Minimum value is {{fnum.errors?.['min'].min}} and your actual value is
                     {{fnum.errors?.['min'].actual}}
+                </div> -->
+                <div *ngIf="fnum.errors?.['number']">
+                    {{fnum.errors?.['number']}}
                 </div>
             </div>
         </div>
@@ -42,7 +45,8 @@
         </div>
         <div>
             <!-- <input type="button" value="Calculate" id="btnCalulate" (click)="calculate(+fnum.value,+snum.value)"> -->
-            <input type="button" value="Calculate" id="btnCalulate" (click)="calculate(calcForm)">
+            <input type="button" value="Calculate" id="btnCalulate" [disabled]="calcForm.invalid"
+                (click)="calculate(calcForm)">
         </div>
         <div>
             <label for="txtResult">Result: &nbsp;</label>
